--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
-  "name": "dagre-d3",
-  "version": "0.4.17",
+  "name": "pn-dagre-d3",
+  "version": "0.4.20",
   "main": [
     "dist/dagre-d3.core.js"
   ],
@@ -11,9 +11,6 @@
     "Makefile",
     "browser.js",
     "build/**",
-    "dist/dagre-d3.js",
-    "dist/dagre-d3.min.js",
-    "dist/dagre-d3.min.js.map",
     "dist/demo/**",
     "index.js",
     "karma*",
